[package]
name = "mechvibes-to-buckle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minreq = { version = "2.11.0", features = ["https"] }
progress_bar = "1.0.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
